--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#4b71ff"
-backgroundColor="#727f98"
-secondaryBackgroundColor="#2d3fa2"
-textColor="#020202"
+primaryColor="#101e5a"
+backgroundColor="#474b4e"
+secondaryBackgroundColor="#33449e"
+textColor="#ffffff"
